execution of application

--- a/.gitignore
+++ b/.gitignore
@@ -515,3 +515,326 @@ node_modules/vary/package.json
 node_modules/vary/README.md
 public/index.html
 public/index.js
+node_modules/@socket.io/component-emitter/LICENSE
+node_modules/@socket.io/component-emitter/package.json
+node_modules/@socket.io/component-emitter/Readme.md
+node_modules/@socket.io/component-emitter/lib/cjs/index.d.ts
+node_modules/@socket.io/component-emitter/lib/cjs/index.js
+node_modules/@socket.io/component-emitter/lib/cjs/package.json
+node_modules/@socket.io/component-emitter/lib/esm/index.d.ts
+node_modules/@socket.io/component-emitter/lib/esm/index.js
+node_modules/@socket.io/component-emitter/lib/esm/package.json
+node_modules/@types/cookie/index.d.ts
+node_modules/@types/cookie/LICENSE
+node_modules/@types/cookie/package.json
+node_modules/@types/cookie/README.md
+node_modules/@types/cors/index.d.ts
+node_modules/@types/cors/LICENSE
+node_modules/@types/cors/package.json
+node_modules/@types/cors/README.md
+node_modules/@types/node/assert.d.ts
+node_modules/@types/node/async_hooks.d.ts
+node_modules/@types/node/buffer.d.ts
+node_modules/@types/node/child_process.d.ts
+node_modules/@types/node/cluster.d.ts
+node_modules/@types/node/console.d.ts
+node_modules/@types/node/constants.d.ts
+node_modules/@types/node/crypto.d.ts
+node_modules/@types/node/dgram.d.ts
+node_modules/@types/node/diagnostics_channel.d.ts
+node_modules/@types/node/dns.d.ts
+node_modules/@types/node/dom-events.d.ts
+node_modules/@types/node/domain.d.ts
+node_modules/@types/node/events.d.ts
+node_modules/@types/node/fs.d.ts
+node_modules/@types/node/globals.d.ts
+node_modules/@types/node/globals.global.d.ts
+node_modules/@types/node/http.d.ts
+node_modules/@types/node/http2.d.ts
+node_modules/@types/node/https.d.ts
+node_modules/@types/node/index.d.ts
+node_modules/@types/node/inspector.d.ts
+node_modules/@types/node/LICENSE
+node_modules/@types/node/module.d.ts
+node_modules/@types/node/net.d.ts
+node_modules/@types/node/os.d.ts
+node_modules/@types/node/package.json
+node_modules/@types/node/path.d.ts
+node_modules/@types/node/perf_hooks.d.ts
+node_modules/@types/node/process.d.ts
+node_modules/@types/node/punycode.d.ts
+node_modules/@types/node/querystring.d.ts
+node_modules/@types/node/readline.d.ts
+node_modules/@types/node/README.md
+node_modules/@types/node/repl.d.ts
+node_modules/@types/node/sea.d.ts
+node_modules/@types/node/stream.d.ts
+node_modules/@types/node/string_decoder.d.ts
+node_modules/@types/node/test.d.ts
+node_modules/@types/node/timers.d.ts
+node_modules/@types/node/tls.d.ts
+node_modules/@types/node/trace_events.d.ts
+node_modules/@types/node/tty.d.ts
+node_modules/@types/node/url.d.ts
+node_modules/@types/node/util.d.ts
+node_modules/@types/node/v8.d.ts
+node_modules/@types/node/vm.d.ts
+node_modules/@types/node/wasi.d.ts
+node_modules/@types/node/worker_threads.d.ts
+node_modules/@types/node/zlib.d.ts
+node_modules/@types/node/assert/strict.d.ts
+node_modules/@types/node/dns/promises.d.ts
+node_modules/@types/node/fs/promises.d.ts
+node_modules/@types/node/readline/promises.d.ts
+node_modules/@types/node/stream/consumers.d.ts
+node_modules/@types/node/stream/promises.d.ts
+node_modules/@types/node/stream/web.d.ts
+node_modules/@types/node/timers/promises.d.ts
+node_modules/base64id/CHANGELOG.md
+node_modules/base64id/LICENSE
+node_modules/base64id/package.json
+node_modules/base64id/README.md
+node_modules/base64id/lib/base64id.js
+node_modules/cors/CONTRIBUTING.md
+node_modules/cors/HISTORY.md
+node_modules/cors/LICENSE
+node_modules/cors/package.json
+node_modules/cors/README.md
+node_modules/cors/lib/index.js
+node_modules/engine.io/LICENSE
+node_modules/engine.io/package.json
+node_modules/engine.io/README.md
+node_modules/engine.io/wrapper.mjs
+node_modules/engine.io/build/engine.io.d.ts
+node_modules/engine.io/build/engine.io.js
+node_modules/engine.io/build/server.d.ts
+node_modules/engine.io/build/server.js
+node_modules/engine.io/build/socket.d.ts
+node_modules/engine.io/build/socket.js
+node_modules/engine.io/build/transport.d.ts
+node_modules/engine.io/build/transport.js
+node_modules/engine.io/build/userver.d.ts
+node_modules/engine.io/build/userver.js
+node_modules/engine.io/build/parser-v3/index.d.ts
+node_modules/engine.io/build/parser-v3/index.js
+node_modules/engine.io/build/parser-v3/utf8.d.ts
+node_modules/engine.io/build/parser-v3/utf8.js
+node_modules/engine.io/build/transports/index.d.ts
+node_modules/engine.io/build/transports/index.js
+node_modules/engine.io/build/transports/polling-jsonp.d.ts
+node_modules/engine.io/build/transports/polling-jsonp.js
+node_modules/engine.io/build/transports/polling.d.ts
+node_modules/engine.io/build/transports/polling.js
+node_modules/engine.io/build/transports/websocket.d.ts
+node_modules/engine.io/build/transports/websocket.js
+node_modules/engine.io/build/transports/webtransport.d.ts
+node_modules/engine.io/build/transports/webtransport.js
+node_modules/engine.io/build/transports-uws/index.d.ts
+node_modules/engine.io/build/transports-uws/index.js
+node_modules/engine.io/build/transports-uws/polling.d.ts
+node_modules/engine.io/build/transports-uws/polling.js
+node_modules/engine.io/build/transports-uws/websocket.d.ts
+node_modules/engine.io/build/transports-uws/websocket.js
+node_modules/engine.io/node_modules/cookie/HISTORY.md
+node_modules/engine.io/node_modules/cookie/index.js
+node_modules/engine.io/node_modules/cookie/LICENSE
+node_modules/engine.io/node_modules/cookie/package.json
+node_modules/engine.io/node_modules/cookie/README.md
+node_modules/engine.io/node_modules/debug/LICENSE
+node_modules/engine.io/node_modules/debug/package.json
+node_modules/engine.io/node_modules/debug/README.md
+node_modules/engine.io/node_modules/debug/src/browser.js
+node_modules/engine.io/node_modules/debug/src/common.js
+node_modules/engine.io/node_modules/debug/src/index.js
+node_modules/engine.io/node_modules/debug/src/node.js
+node_modules/engine.io/node_modules/ms/index.js
+node_modules/engine.io/node_modules/ms/license.md
+node_modules/engine.io/node_modules/ms/package.json
+node_modules/engine.io/node_modules/ms/readme.md
+node_modules/engine.io-parser/LICENSE
+node_modules/engine.io-parser/package.json
+node_modules/engine.io-parser/Readme.md
+node_modules/engine.io-parser/build/cjs/commons.d.ts
+node_modules/engine.io-parser/build/cjs/commons.js
+node_modules/engine.io-parser/build/cjs/decodePacket.browser.d.ts
+node_modules/engine.io-parser/build/cjs/decodePacket.browser.js
+node_modules/engine.io-parser/build/cjs/decodePacket.d.ts
+node_modules/engine.io-parser/build/cjs/decodePacket.js
+node_modules/engine.io-parser/build/cjs/encodePacket.browser.d.ts
+node_modules/engine.io-parser/build/cjs/encodePacket.browser.js
+node_modules/engine.io-parser/build/cjs/encodePacket.d.ts
+node_modules/engine.io-parser/build/cjs/encodePacket.js
+node_modules/engine.io-parser/build/cjs/index.d.ts
+node_modules/engine.io-parser/build/cjs/index.js
+node_modules/engine.io-parser/build/cjs/package.json
+node_modules/engine.io-parser/build/cjs/contrib/base64-arraybuffer.d.ts
+node_modules/engine.io-parser/build/cjs/contrib/base64-arraybuffer.js
+node_modules/engine.io-parser/build/esm/commons.d.ts
+node_modules/engine.io-parser/build/esm/commons.js
+node_modules/engine.io-parser/build/esm/decodePacket.browser.d.ts
+node_modules/engine.io-parser/build/esm/decodePacket.browser.js
+node_modules/engine.io-parser/build/esm/decodePacket.d.ts
+node_modules/engine.io-parser/build/esm/decodePacket.js
+node_modules/engine.io-parser/build/esm/encodePacket.browser.d.ts
+node_modules/engine.io-parser/build/esm/encodePacket.browser.js
+node_modules/engine.io-parser/build/esm/encodePacket.d.ts
+node_modules/engine.io-parser/build/esm/encodePacket.js
+node_modules/engine.io-parser/build/esm/index.d.ts
+node_modules/engine.io-parser/build/esm/index.js
+node_modules/engine.io-parser/build/esm/package.json
+node_modules/engine.io-parser/build/esm/contrib/base64-arraybuffer.d.ts
+node_modules/engine.io-parser/build/esm/contrib/base64-arraybuffer.js
+node_modules/object-assign/index.js
+node_modules/object-assign/license
+node_modules/object-assign/package.json
+node_modules/object-assign/readme.md
+node_modules/socket.io/LICENSE
+node_modules/socket.io/package.json
+node_modules/socket.io/Readme.md
+node_modules/socket.io/wrapper.mjs
+node_modules/socket.io/client-dist/socket.io.esm.min.js
+node_modules/socket.io/client-dist/socket.io.esm.min.js.map
+node_modules/socket.io/client-dist/socket.io.js
+node_modules/socket.io/client-dist/socket.io.js.map
+node_modules/socket.io/client-dist/socket.io.min.js
+node_modules/socket.io/client-dist/socket.io.min.js.map
+node_modules/socket.io/client-dist/socket.io.msgpack.min.js
+node_modules/socket.io/client-dist/socket.io.msgpack.min.js.map
+node_modules/socket.io/dist/broadcast-operator.d.ts
+node_modules/socket.io/dist/broadcast-operator.js
+node_modules/socket.io/dist/client.d.ts
+node_modules/socket.io/dist/client.js
+node_modules/socket.io/dist/index.d.ts
+node_modules/socket.io/dist/index.js
+node_modules/socket.io/dist/namespace.d.ts
+node_modules/socket.io/dist/namespace.js
+node_modules/socket.io/dist/parent-namespace.d.ts
+node_modules/socket.io/dist/parent-namespace.js
+node_modules/socket.io/dist/socket.d.ts
+node_modules/socket.io/dist/socket.js
+node_modules/socket.io/dist/typed-events.d.ts
+node_modules/socket.io/dist/typed-events.js
+node_modules/socket.io/dist/uws.d.ts
+node_modules/socket.io/dist/uws.js
+node_modules/socket.io/node_modules/debug/LICENSE
+node_modules/socket.io/node_modules/debug/package.json
+node_modules/socket.io/node_modules/debug/README.md
+node_modules/socket.io/node_modules/debug/src/browser.js
+node_modules/socket.io/node_modules/debug/src/common.js
+node_modules/socket.io/node_modules/debug/src/index.js
+node_modules/socket.io/node_modules/debug/src/node.js
+node_modules/socket.io/node_modules/ms/index.js
+node_modules/socket.io/node_modules/ms/license.md
+node_modules/socket.io/node_modules/ms/package.json
+node_modules/socket.io/node_modules/ms/readme.md
+node_modules/socket.io-adapter/LICENSE
+node_modules/socket.io-adapter/package.json
+node_modules/socket.io-adapter/Readme.md
+node_modules/socket.io-adapter/dist/cluster-adapter.d.ts
+node_modules/socket.io-adapter/dist/cluster-adapter.js
+node_modules/socket.io-adapter/dist/in-memory-adapter.d.ts
+node_modules/socket.io-adapter/dist/in-memory-adapter.js
+node_modules/socket.io-adapter/dist/index.d.ts
+node_modules/socket.io-adapter/dist/index.js
+node_modules/socket.io-adapter/dist/contrib/yeast.d.ts
+node_modules/socket.io-adapter/dist/contrib/yeast.js
+node_modules/socket.io-adapter/node_modules/debug/LICENSE
+node_modules/socket.io-adapter/node_modules/debug/package.json
+node_modules/socket.io-adapter/node_modules/debug/README.md
+node_modules/socket.io-adapter/node_modules/debug/src/browser.js
+node_modules/socket.io-adapter/node_modules/debug/src/common.js
+node_modules/socket.io-adapter/node_modules/debug/src/index.js
+node_modules/socket.io-adapter/node_modules/debug/src/node.js
+node_modules/socket.io-adapter/node_modules/ms/index.js
+node_modules/socket.io-adapter/node_modules/ms/license.md
+node_modules/socket.io-adapter/node_modules/ms/package.json
+node_modules/socket.io-adapter/node_modules/ms/readme.md
+node_modules/socket.io-parser/LICENSE
+node_modules/socket.io-parser/package.json
+node_modules/socket.io-parser/Readme.md
+node_modules/socket.io-parser/build/cjs/binary.d.ts
+node_modules/socket.io-parser/build/cjs/binary.js
+node_modules/socket.io-parser/build/cjs/index.d.ts
+node_modules/socket.io-parser/build/cjs/index.js
+node_modules/socket.io-parser/build/cjs/is-binary.d.ts
+node_modules/socket.io-parser/build/cjs/is-binary.js
+node_modules/socket.io-parser/build/cjs/package.json
+node_modules/socket.io-parser/build/esm/binary.d.ts
+node_modules/socket.io-parser/build/esm/binary.js
+node_modules/socket.io-parser/build/esm/index.d.ts
+node_modules/socket.io-parser/build/esm/index.js
+node_modules/socket.io-parser/build/esm/is-binary.d.ts
+node_modules/socket.io-parser/build/esm/is-binary.js
+node_modules/socket.io-parser/build/esm/package.json
+node_modules/socket.io-parser/build/esm-debug/binary.d.ts
+node_modules/socket.io-parser/build/esm-debug/binary.js
+node_modules/socket.io-parser/build/esm-debug/index.d.ts
+node_modules/socket.io-parser/build/esm-debug/index.js
+node_modules/socket.io-parser/build/esm-debug/is-binary.d.ts
+node_modules/socket.io-parser/build/esm-debug/is-binary.js
+node_modules/socket.io-parser/build/esm-debug/package.json
+node_modules/socket.io-parser/node_modules/debug/LICENSE
+node_modules/socket.io-parser/node_modules/debug/package.json
+node_modules/socket.io-parser/node_modules/debug/README.md
+node_modules/socket.io-parser/node_modules/debug/src/browser.js
+node_modules/socket.io-parser/node_modules/debug/src/common.js
+node_modules/socket.io-parser/node_modules/debug/src/index.js
+node_modules/socket.io-parser/node_modules/debug/src/node.js
+node_modules/socket.io-parser/node_modules/ms/index.js
+node_modules/socket.io-parser/node_modules/ms/license.md
+node_modules/socket.io-parser/node_modules/ms/package.json
+node_modules/socket.io-parser/node_modules/ms/readme.md
+node_modules/undici-types/agent.d.ts
+node_modules/undici-types/api.d.ts
+node_modules/undici-types/balanced-pool.d.ts
+node_modules/undici-types/cache.d.ts
+node_modules/undici-types/client.d.ts
+node_modules/undici-types/connector.d.ts
+node_modules/undici-types/content-type.d.ts
+node_modules/undici-types/cookies.d.ts
+node_modules/undici-types/diagnostics-channel.d.ts
+node_modules/undici-types/dispatcher.d.ts
+node_modules/undici-types/errors.d.ts
+node_modules/undici-types/fetch.d.ts
+node_modules/undici-types/file.d.ts
+node_modules/undici-types/filereader.d.ts
+node_modules/undici-types/formdata.d.ts
+node_modules/undici-types/global-dispatcher.d.ts
+node_modules/undici-types/global-origin.d.ts
+node_modules/undici-types/handlers.d.ts
+node_modules/undici-types/header.d.ts
+node_modules/undici-types/index.d.ts
+node_modules/undici-types/interceptors.d.ts
+node_modules/undici-types/mock-agent.d.ts
+node_modules/undici-types/mock-client.d.ts
+node_modules/undici-types/mock-errors.d.ts
+node_modules/undici-types/mock-interceptor.d.ts
+node_modules/undici-types/mock-pool.d.ts
+node_modules/undici-types/package.json
+node_modules/undici-types/patch.d.ts
+node_modules/undici-types/pool-stats.d.ts
+node_modules/undici-types/pool.d.ts
+node_modules/undici-types/proxy-agent.d.ts
+node_modules/undici-types/readable.d.ts
+node_modules/undici-types/README.md
+node_modules/undici-types/webidl.d.ts
+node_modules/undici-types/websocket.d.ts
+node_modules/ws/browser.js
+node_modules/ws/index.js
+node_modules/ws/LICENSE
+node_modules/ws/package.json
+node_modules/ws/README.md
+node_modules/ws/wrapper.mjs
+node_modules/ws/lib/buffer-util.js
+node_modules/ws/lib/constants.js
+node_modules/ws/lib/event-target.js
+node_modules/ws/lib/extension.js
+node_modules/ws/lib/limiter.js
+node_modules/ws/lib/permessage-deflate.js
+node_modules/ws/lib/receiver.js
+node_modules/ws/lib/sender.js
+node_modules/ws/lib/stream.js
+node_modules/ws/lib/subprotocol.js
+node_modules/ws/lib/validation.js
+node_modules/ws/lib/websocket-server.js
+node_modules/ws/lib/websocket.js
